# axum-template

./: .gitignore  Cargo.toml  LICENSE  README.md  docker-compose.yaml  flake.nix
api-server/: Cargo.toml  ex_conf.toml
api-server/src/: config.rs  error.rs  lib.rs  main.rs
api-server/src/db/: user.rs
api-server/src/routes/: account.rs  health.rs  mod.rs
api-server/tests/: account.rs  util.rs
migrations/: 20240824063427_initial_migration.down.sql  20240824063427_initial_migration.up.sql
