[package]
name = "api-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
argon2 = "0.5"
axum = { version = "0.7", features = ["macros"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
http = "1"
lazy_static = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["chrono", "postgres", "runtime-tokio", "tls-rustls"] }
thiserror = "1"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"

[dependencies.lettre]
version = "0.11"
default-features = false
features = [
  "builder",
  "hostname",
  "pool",
  "smtp-transport",
  "serde",
  "tokio1-rustls-tls"
]
